--- a/package.json
+++ b/package.json
@@ -24,12 +24,13 @@
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.8.0",
     "googleapis": "^128.0.0",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+     "socket.io": "^4.7.2"
   },
   "devDependencies": {
     "@types/express": "^5.0.1",
     "@types/node": "^20.11.0",
-    "@types/socket.io": "^3.0.1",
+    "@types/socket.io": "^4.7.2",
     "@typescript-eslint/eslint-plugin": "^6.19.0",
     "@typescript-eslint/parser": "^6.19.0",
     "eslint": "^8.56.0",
